[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimoaudio"
version = "0.1.0"
description = "MiMo-Audio: Audio Language Models are Few-Shot Learners"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.9.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers>=4.49.0",
    "librosa>=0.11.0",
    "scipy>=1.16.1",
    "soundfile>=0.12.0",
    "zhon>=2.1.1",
]

[project.optional-dependencies]
demo = [
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "gradio>=5.46.1",
]

[tool.setuptools.packages.find]
where = ["src"]
